--- a/css/Home.css
+++ b/css/Home.css
@@ -287,19 +287,31 @@ nav ul li:hover::after{
     gap: 10px 80px;
     text-align: center;
 }
+.section3 .container .row3{
+    display: grid;
+    width: 100%;
+    height: 120px;
+    grid-template-columns: repeat(1,auto);
+    grid-template-rows: repeat(2, auto);
+    justify-content: center;
+    gap: 10px 80px;
+    text-align: center;
+}
 
 .section3 .container .row1 div,
-.section3 .container .row2 div{
+.section3 .container .row2 div,
+.section3 .container .row3 div{
     background-color: var(--secondcolor);
     display: flex;
-    width: 100px;
-    height: 100px;
+    width: 98px;
+    height: 98px;
     border-radius: 100%;
     transition: 0.3s 0.1s;
 }
 
 .section3 .container .row1 div:hover,
-.section3 .container .row2 div:hover{
+.section3 .container .row2 div:hover,
+.section3 .container .row3 div:hover{
     transform: scale(1.1);
     cursor: pointer;
 }
@@ -311,8 +323,14 @@ nav ul li:hover::after{
 }
 
 .section3 img{
-    width: 80px;
-    height: 80px;
+    width: 60px;
+    height: 60px;
+}
+
+.section3 .product2 img{
+    width: 70px;
+    height: 70px;
+    margin: auto;
 }
 
 .section3 .product3 img{
@@ -340,7 +358,12 @@ nav ul li:hover::after{
     height: 70px;
     margin: auto;
 }
-
+}
+.section3 .product8 img{
+    width: 70px;
+    height: 70px;
+    margin: auto;
+}
 
 /* Footer */
 
